--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -10,17 +10,42 @@
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   -->
 
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+
   <script type="module">
     const rootElement = document.getElementById('root')
 
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
+
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
+
+    // Exercise
+    // const element = React.createElement('div', {
+    //   className: 'container',
+    //   children: 'Hello World',
+    // })
+
+    // Extra 1.
+    const hello = React.createElement('span', {children: 'Hello', key: 1})
+    const world = React.createElement('span', {children: 'World', key: 2})
+    const element = React.createElement(
+      'div',
+      {
+        className: 'container',
+      },
+      hello,
+      ' ',
+      world,
+    )
+
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    // rootElement.append(element)
+    ReactDOM.render(element, rootElement)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
