--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -9,16 +9,32 @@
   <!-- 💣 remove this line
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   💣 remove this line -->
+  <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
 
-  <script type="module">
+  <script type="text/babel">
     // 🐨 on the script tag above, change `type="module"`
     // to `type="text/babel"` so babel will compile this code for the browser to run.
 
     // 🐨 re-implement this using JSX!
-    const element = React.createElement('div', {
+    // const element = React.createElement('div', {
+    //   className: 'container',
+    //   children: 'Hello World',
+    // })
+
+    // Exercise
+    // const element = <div className="container">Hello World</div>
+
+    // Extra 1.
+    // const className = 'container'
+    // const children = 'Hello World'
+    // const element = <div className={className}>{children}</div>
+
+    // Extra 2.
+    const props = {
       className: 'container',
       children: 'Hello World',
-    })
+    }
+    const element = <div {...props} />
 
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
