--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,16 +6,100 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <!-- Extra 4. -->
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
+
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+
+    // Exercise
+    // function message({children}) {
+    //   return <div className="message">{children}</div>
+    // }
+
+    // const helloElement = message({children: 'Hello World'})
+    // const goodbyeElement = message({children: 'Goodbye World'})
+
+    // const element = (
+    //   <div className="container">
+    //     {helloElement} {goodbyeElement}
+    //   </div>
+    // )
+
+    // Extra 1.
+    // const element = (
+    //   <div className="container">
+    //     {React.createElement(message, {children: 'Hello World'})}{' '}
+    //     {React.createElement(message, {children: 'Goodbye World'})}
+    //   </div>
+    // )
+
+    // Extra 2.
+    // const Message = ({children}) => <div className="message">{children}</div>
+    // const element = (
+    //   <div className="container">
+    //     <Message>Hello World</Message>
+    //     <Message>Goodbye World</Message>
+    //   </div>
+    // )
+
+    // Extra 3.
+    // function Message({subject, greeting}) {
+    //   return (
+    //     <div className="message">
+    //       {greeting}, {subject}
+    //     </div>
+    //   )
+    // }
+    // const PropTypes = {
+    //   string: (props, propName, componentName) => {
+    //     const type = typeof props[propName]
+    //     if (type !== 'string') {
+    //       return new Error(
+    //         `The component \`${componentName}\` needs the prop \`${propName}\` to be a type of \`string\` but was passed a \`${type}\`.`,
+    //       )
+    //     }
+    //   },
+    // }
+    // Message.propTypes = {
+    //   greeting: PropTypes.string,
+    //   subject: PropTypes.string,
+    // }
+    // const element = (
+    //   <div className="container">
+    //     <Message greeting="Hello" subject="World" />
+    //     <Message greeting="Goodbye" subject="World" />
+    //   </div>
+    // )
+
+    // Extra 4.
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+    Message.propTypes = {
+      greeting: PropTypes.string.isRequired,
+      subject: PropTypes.string.isRequired,
+    }
+    // const element = (
+    //   <div className="container">
+    //     <Message greeting="Hello" subject="World" />
+    //     <Message greeting="Goodbye" subject="World" />
+    //   </div>
+    // )
+
+    // Extra 5.
     const element = (
-      <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
-      </div>
+      <>
+        <Message greeting="Hello" subject="World" />
+        <Message greeting="Goodbye" subject="World" />
+      </>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
